[gd_scene load_steps=9 format=2]

[ext_resource path="res://christmas lights.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://menu/button.tscn" type="PackedScene" id=2]
[ext_resource path="res://level stuff/text.tscn" type="PackedScene" id=3]
[ext_resource path="res://menu/menu.gd" type="Script" id=4]
[ext_resource path="res://audio/click.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 90
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[node name="menu" type="CanvasLayer"]
layer = 2

[node name="menu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="menu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.427451, 0.407843, 0.458824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="RichTextLabel" parent="menu"]
modulate = Color( 1, 0.705882, 0.635294, 1 )
margin_left = 289.315
margin_top = 104.962
margin_right = 963.315
margin_bottom = 225.962
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center] sunset-shaped"
text = " sunset-shaped"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play" parent="menu" instance=ExtResource( 2 )]
margin_left = -89.141
margin_top = 254.244
margin_right = 442.859
margin_bottom = 375.244
focus_neighbour_right = NodePath("../levels")
focus_neighbour_bottom = NodePath("../levels")

[node name="levels" parent="menu" instance=ExtResource( 2 )]
margin_left = 108.852
margin_top = 312.682
margin_right = 640.852
margin_bottom = 433.682
focus_neighbour_left = NodePath("../play")
focus_neighbour_top = NodePath("../play")

[node name="text" parent="menu/levels" index="0"]
bbcode_text = "[center]levels"
text = "levels"

[node name="Particles2D" parent="menu/levels" index="1"]
position = Vector2( 178.122, 31.6753 )

[node name="info" parent="menu" instance=ExtResource( 2 )]
margin_left = 320.413
margin_top = 358.007
margin_right = 852.413
margin_bottom = 479.007
focus_neighbour_left = NodePath("../levels")
focus_neighbour_top = NodePath("../levels")
focus_neighbour_right = NodePath("../quit")
focus_neighbour_bottom = NodePath("../quit")

[node name="text" parent="menu/info" index="0"]
bbcode_text = "[center]info"
text = "info"

[node name="quit" parent="menu" instance=ExtResource( 2 )]
margin_left = 498.761
margin_top = 407.561
margin_right = 1030.76
margin_bottom = 528.561
focus_neighbour_left = NodePath("../info")
focus_neighbour_top = NodePath("../info")
focus_neighbour_right = NodePath("")
focus_neighbour_bottom = NodePath("")

[node name="text" parent="menu/quit" index="0"]
bbcode_text = "[center]quit"
text = "quit"

[node name="text" parent="menu" instance=ExtResource( 3 )]
modulate = Color( 1, 0.803922, 0.698039, 1 )
margin_left = 44.0
margin_top = 532.587
margin_right = 498.761
margin_bottom = 738.587
bbcode_text = "press z to select"
text = "press z to select"

[node name="f5f10" parent="menu" instance=ExtResource( 3 )]
modulate = Color( 1, 0.803922, 0.698039, 1 )
margin_left = 44.9879
margin_top = 506.689
margin_right = 663.988
margin_bottom = 712.689
custom_fonts/normal_font = SubResource( 2 )
bbcode_text = "f5 for mods / f10 to mute"
text = "f5 for mods / f10 to mute"

[node name="mods" parent="menu" instance=ExtResource( 3 )]
margin_left = 20.0
margin_top = 30.0
margin_right = 638.112
margin_bottom = 235.705
custom_fonts/normal_font = SubResource( 3 )
bbcode_text = "mods:"
text = "mods:"

[node name="levels" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="levels"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.427451, 0.407843, 0.458824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="RichTextLabel" parent="levels"]
modulate = Color( 1, 0.705882, 0.635294, 1 )
margin_left = 289.315
margin_top = 104.962
margin_right = 963.315
margin_bottom = 225.962
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]level select"
text = "level select"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" parent="levels" instance=ExtResource( 2 )]
margin_left = -137.597
margin_top = 237.007
margin_right = 394.403
margin_bottom = 358.007
focus_neighbour_right = NodePath("../2")
focus_neighbour_bottom = NodePath("../2")

[node name="text" parent="levels/1" index="0"]
bbcode_text = "[center]1"
text = "1"

[node name="Particles2D" parent="levels/1" index="1"]
position = Vector2( 272.684, 31.6753 )

[node name="2" parent="levels" instance=ExtResource( 2 )]
margin_left = -0.432114
margin_top = 285.919
margin_right = 531.568
margin_bottom = 406.919
focus_neighbour_left = NodePath("../1")
focus_neighbour_top = NodePath("../1")
focus_neighbour_right = NodePath("../3")
focus_neighbour_bottom = NodePath("../3")

[node name="text" parent="levels/2" index="0"]
bbcode_text = "[center]2"
text = "2"

[node name="Particles2D" parent="levels/2" index="1"]
position = Vector2( 265.389, 31.6753 )

[node name="3" parent="levels" instance=ExtResource( 2 )]
margin_left = 129.951
margin_top = 327.595
margin_right = 661.951
margin_bottom = 448.595
focus_neighbour_left = NodePath("../2")
focus_neighbour_top = NodePath("../2")
focus_neighbour_right = NodePath("../4")
focus_neighbour_bottom = NodePath("../4")

[node name="text" parent="levels/3" index="0"]
bbcode_text = "[center]3"
text = "3"

[node name="Particles2D" parent="levels/3" index="1"]
position = Vector2( 262.937, 34.474 )

[node name="4" parent="levels" instance=ExtResource( 2 )]
margin_left = 264.957
margin_top = 360.431
margin_right = 796.956
margin_bottom = 481.431
focus_neighbour_left = NodePath("../3")
focus_neighbour_top = NodePath("../3")
focus_neighbour_right = NodePath("../5")
focus_neighbour_bottom = NodePath("../5")

[node name="text" parent="levels/4" index="0"]
bbcode_text = "[center]4"
text = "4"

[node name="Particles2D" parent="levels/4" index="1"]
position = Vector2( 268.968, 31.6753 )

[node name="5" parent="levels" instance=ExtResource( 2 )]
margin_left = 392.888
margin_top = 387.106
margin_right = 924.887
margin_bottom = 508.106
focus_neighbour_left = NodePath("../4")
focus_neighbour_top = NodePath("../4")
focus_neighbour_right = NodePath("../back")
focus_neighbour_bottom = NodePath("../back")

[node name="text" parent="levels/5" index="0"]
bbcode_text = "[center]5"
text = "5"

[node name="Particles2D" parent="levels/5" index="1"]
position = Vector2( 273.562, 31.6753 )

[node name="back" parent="levels" instance=ExtResource( 2 )]
margin_left = 558.582
margin_top = 429.756
margin_right = 1090.58
margin_bottom = 550.756
focus_neighbour_left = NodePath("../5")
focus_neighbour_top = NodePath("../5")
focus_neighbour_right = NodePath("")
focus_neighbour_bottom = NodePath("")

[node name="text" parent="levels/back" index="0"]
bbcode_text = "[center]back"
text = "back"

[node name="text" parent="levels" instance=ExtResource( 3 )]
modulate = Color( 1, 0.803922, 0.698039, 1 )
margin_left = -120.239
margin_top = 532.587
margin_right = 498.761
margin_bottom = 738.587
bbcode_text = "[center]press z to select"
text = "press z to select"

[node name="pause" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="pause"]
modulate = Color( 1, 1, 1, 0.862745 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.427451, 0.407843, 0.458824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="RichTextLabel" parent="pause"]
modulate = Color( 1, 0.705882, 0.635294, 1 )
margin_left = 289.315
margin_top = 104.962
margin_right = 963.315
margin_bottom = 225.962
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]paused"
text = "paused"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continue" parent="pause" instance=ExtResource( 2 )]
margin_left = -56.5632
margin_top = 237.007
margin_right = 475.437
margin_bottom = 358.007
focus_neighbour_right = NodePath("../restart")
focus_neighbour_bottom = NodePath("../restart")

[node name="text" parent="pause/continue" index="0"]
bbcode_text = "[center]continue"
text = "continue"

[node name="Particles2D" parent="pause/continue" index="1"]
position = Vector2( 137.824, 31.6753 )

[node name="restart" parent="pause" instance=ExtResource( 2 )]
margin_left = 121.559
margin_top = 308.756
margin_right = 653.559
margin_bottom = 429.756
focus_neighbour_left = NodePath("../continue")
focus_neighbour_top = NodePath("../continue")
focus_neighbour_right = NodePath("../restart2")
focus_neighbour_bottom = NodePath("../restart2")

[node name="text" parent="pause/restart" index="0"]
margin_left = -19.6961
margin_right = 599.304
bbcode_text = "[center]restart level"
text = "restart level"

[node name="Particles2D" parent="pause/restart" index="1"]
position = Vector2( 61.9836, 37.6753 )

[node name="restart2" parent="pause" instance=ExtResource( 2 )]
margin_left = 331.231
margin_top = 377.007
margin_right = 863.231
margin_bottom = 498.007
focus_neighbour_left = NodePath("../restart")
focus_neighbour_top = NodePath("../restart")
focus_neighbour_right = NodePath("../quit")
focus_neighbour_bottom = NodePath("../quit")

[node name="text" parent="pause/restart2" index="0"]
bbcode_text = "[center]restart game"
text = "restart game"

[node name="Particles2D" parent="pause/restart2" index="1"]
position = Vector2( 77.281, 30.5543 )

[node name="quit" parent="pause" instance=ExtResource( 2 )]
margin_left = 538.542
margin_top = 435.119
margin_right = 1070.54
margin_bottom = 556.119
focus_neighbour_left = NodePath("../restart2")
focus_neighbour_top = NodePath("../restart2")
focus_neighbour_right = NodePath("")
focus_neighbour_bottom = NodePath("")

[node name="text" parent="pause/quit" index="0"]
bbcode_text = "[center]quit"
text = "quit"

[node name="text" parent="pause" instance=ExtResource( 3 )]
modulate = Color( 1, 0.803922, 0.698039, 1 )
margin_left = -120.239
margin_top = 532.587
margin_right = 498.761
margin_bottom = 738.587
bbcode_text = "[center]press z to select"
text = "press z to select"

[node name="levelconfirm" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="levelconfirm"]
modulate = Color( 1, 1, 1, 0.862745 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.427451, 0.407843, 0.458824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="RichTextLabel" parent="levelconfirm"]
modulate = Color( 1, 0.705882, 0.635294, 1 )
margin_left = 289.315
margin_top = 104.962
margin_right = 963.315
margin_bottom = 225.962
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]restart level"
text = "restart level"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text2" parent="levelconfirm" instance=ExtResource( 3 )]
margin_left = 171.428
margin_top = 207.586
margin_right = 790.428
margin_bottom = 413.586
bbcode_text = "[center]are you sure you want to
restart the level?
your time will not reset."
text = "are you sure you want to
restart the level?
your time will not reset."

[node name="continue" parent="levelconfirm" instance=ExtResource( 2 )]
margin_left = 22.1313
margin_top = 355.431
margin_right = 554.132
margin_bottom = 476.431
focus_neighbour_right = NodePath("../return")
focus_neighbour_bottom = NodePath("../return")

[node name="text" parent="levelconfirm/continue" index="0"]
bbcode_text = "[center]restart"
text = "restart"

[node name="Particles2D" parent="levelconfirm/continue" index="1"]
position = Vector2( 137.824, 31.6753 )

[node name="return" parent="levelconfirm" instance=ExtResource( 2 )]
margin_left = 332.892
margin_top = 418.79
margin_right = 864.891
margin_bottom = 539.79
focus_neighbour_left = NodePath("../continue")
focus_neighbour_top = NodePath("../continue")
focus_neighbour_right = NodePath("")
focus_neighbour_bottom = NodePath("")

[node name="text" parent="levelconfirm/return" index="0"]
bbcode_text = "[center]return"
text = "return"

[node name="text" parent="levelconfirm" instance=ExtResource( 3 )]
modulate = Color( 1, 0.803922, 0.698039, 1 )
margin_left = -120.239
margin_top = 532.587
margin_right = 498.761
margin_bottom = 738.587
bbcode_text = "[center]press z to select"
text = "press z to select"

[node name="gameconfirm" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="gameconfirm"]
modulate = Color( 1, 1, 1, 0.862745 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.427451, 0.407843, 0.458824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="RichTextLabel" parent="gameconfirm"]
modulate = Color( 1, 0.705882, 0.635294, 1 )
margin_left = 289.315
margin_top = 104.962
margin_right = 963.315
margin_bottom = 225.962
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]restart game"
text = "restart game"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text2" parent="gameconfirm" instance=ExtResource( 3 )]
margin_left = 171.428
margin_top = 207.586
margin_right = 790.428
margin_bottom = 413.586
bbcode_text = "[center]are you sure you want to
restart the game?
your time will reset."
text = "are you sure you want to
restart the game?
your time will reset."

[node name="continue" parent="gameconfirm" instance=ExtResource( 2 )]
margin_left = 22.1313
margin_top = 355.431
margin_right = 554.132
margin_bottom = 476.431
focus_neighbour_right = NodePath("../return")
focus_neighbour_bottom = NodePath("../return")

[node name="text" parent="gameconfirm/continue" index="0"]
bbcode_text = "[center]restart"
text = "restart"

[node name="Particles2D" parent="gameconfirm/continue" index="1"]
position = Vector2( 137.824, 31.6753 )

[node name="return" parent="gameconfirm" instance=ExtResource( 2 )]
margin_left = 332.892
margin_top = 418.79
margin_right = 864.891
margin_bottom = 539.79
focus_neighbour_left = NodePath("../continue")
focus_neighbour_top = NodePath("../continue")
focus_neighbour_right = NodePath("")
focus_neighbour_bottom = NodePath("")

[node name="text" parent="gameconfirm/return" index="0"]
bbcode_text = "[center]return"
text = "return"

[node name="text" parent="gameconfirm" instance=ExtResource( 3 )]
modulate = Color( 1, 0.803922, 0.698039, 1 )
margin_left = -120.239
margin_top = 532.587
margin_right = 498.761
margin_bottom = 738.587
bbcode_text = "[center]press z to select"
text = "press z to select"

[node name="info" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="info"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.427451, 0.407843, 0.458824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="RichTextLabel" parent="info"]
modulate = Color( 0.898039, 0.596078, 0.607843, 1 )
margin_left = 171.428
margin_top = 77.5837
margin_right = 845.428
margin_bottom = 198.584
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center] sunset-shaped"
text = " sunset-shaped"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text" parent="info" instance=ExtResource( 3 )]
margin_left = 212.5
margin_top = 172.119
margin_right = 831.5
margin_bottom = 438.119
custom_constants/line_separation = 0
bbcode_text = "[center]is created by [color=#FFB4A2]bucketfish[/color] for the [color=#FFB4A2]stop waiting for godot[/color] jam. all art, music, and code belong to her.

special thanks to [color=#FFB4A2]thalia[/color], [color=#FFB4A2]taf[/color], [color=#FFB4A2]exa[/color], [color=#FFB4A2]bread[/color], [color=#FFB4A2]john[/color], [color=#FFB4A2]fern[/color], and [color=#FFB4A2]giraffe[/color]."
text = "is created by bucketfish for the stop waiting for godot jam. all art, music, and code belong to her.

special thanks to thalia, taf, exa, bread, john, fern, and giraffe."

[node name="back" parent="info" instance=ExtResource( 2 )]
margin_left = 212.5
margin_top = 459.882
margin_right = 744.5
margin_bottom = 580.882

[node name="text" parent="info/back" index="0"]
bbcode_text = "[center]back"
text = "back"

[node name="text2" parent="info" instance=ExtResource( 3 )]
modulate = Color( 1, 0.803922, 0.698039, 1 )
margin_left = -120.239
margin_top = 532.587
margin_right = 498.761
margin_bottom = 738.587
bbcode_text = "[center]press z to select"
text = "press z to select"

[node name="end" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="end"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.427451, 0.407843, 0.458824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="RichTextLabel" parent="end"]
modulate = Color( 0.898039, 0.596078, 0.607843, 1 )
margin_left = 171.428
margin_top = 77.5837
margin_right = 845.428
margin_bottom = 198.584
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]the end."
text = "the end."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text" parent="end" instance=ExtResource( 3 )]
margin_left = 212.5
margin_top = 172.119
margin_right = 831.5
margin_bottom = 438.119
custom_constants/line_separation = 0
bbcode_text = "[center]thank you for playing [color=#FFB4A2]sunset-shaped[/color] by [color=#FFB4A2]bucketfish[/color].

i hoped you enjoyed playing it. i enjoyed making it.
[color=#FFB4A2]stay safe.[/color]"
text = "thank you for playing sunset-shaped by bucketfish.

i hoped you enjoyed playing it. i enjoyed making it.
stay safe."

[node name="leveltime" parent="end" instance=ExtResource( 2 )]
margin_left = 55.024
margin_top = 430.048
margin_right = 587.024
margin_bottom = 551.049
focus_neighbour_right = NodePath("../back")
focus_neighbour_bottom = NodePath("../back")

[node name="text" parent="end/leveltime" index="0"]
bbcode_text = "[center]level time"
text = "level time"

[node name="Particles2D" parent="end/leveltime" index="1"]
position = Vector2( 130.383, 31.6753 )

[node name="back" parent="end" instance=ExtResource( 2 )]
margin_left = 373.971
margin_top = 468.614
margin_right = 905.971
margin_bottom = 589.614
focus_neighbour_left = NodePath("../leveltime")
focus_neighbour_top = NodePath("../leveltime")
focus_neighbour_right = NodePath("")
focus_neighbour_bottom = NodePath("")

[node name="text" parent="end/back" index="0"]
bbcode_text = "[center]back"
text = "back"

[node name="text2" parent="end" instance=ExtResource( 3 )]
modulate = Color( 1, 0.803922, 0.698039, 1 )
margin_left = -120.239
margin_top = 532.587
margin_right = 498.761
margin_bottom = 738.587
bbcode_text = "[center]press z to select"
text = "press z to select"

[node name="leveltimer" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="leveltimer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.427451, 0.407843, 0.458824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="RichTextLabel" parent="leveltimer"]
modulate = Color( 0.898039, 0.596078, 0.607843, 1 )
margin_left = 171.428
margin_top = 77.5837
margin_right = 845.428
margin_bottom = 198.584
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]level timer"
text = "level timer"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text" parent="leveltimer" instance=ExtResource( 3 )]
margin_left = 212.5
margin_top = 172.119
margin_right = 831.5
margin_bottom = 438.119
custom_constants/line_separation = 0
bbcode_text = "[center]per-level timer:
level 1 - %s
level 2 - %s
level 3 - %s
level 4 - %s
level 5 - %s"
text = "per-level timer:
level 1 - %s
level 2 - %s
level 3 - %s
level 4 - %s
level 5 - %s"

[node name="back" parent="leveltimer" instance=ExtResource( 2 )]
margin_left = 212.5
margin_top = 459.882
margin_right = 744.5
margin_bottom = 580.882

[node name="text" parent="leveltimer/back" index="0"]
bbcode_text = "[center]back"
text = "back"

[node name="text2" parent="leveltimer" instance=ExtResource( 3 )]
modulate = Color( 1, 0.803922, 0.698039, 1 )
margin_left = -120.239
margin_top = 532.587
margin_right = 498.761
margin_bottom = 738.587
bbcode_text = "[center]press z to select"
text = "press z to select"

[node name="clicksound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -30.0

[connection signal="pressed" from="menu/play" to="menu" method="_on_play_pressed"]
[connection signal="pressed" from="menu/levels" to="menu" method="_on_levels_pressed"]
[connection signal="pressed" from="menu/info" to="menu" method="_on_info_pressed"]
[connection signal="pressed" from="menu/quit" to="menu" method="_on_quit_pressed"]
[connection signal="levelselect" from="levels/1" to="menu" method="_on_levelselect"]
[connection signal="pressed" from="levels/1" to="levels/1" method="_levelselect_clicked"]
[connection signal="levelselect" from="levels/2" to="menu" method="_on_levelselect"]
[connection signal="pressed" from="levels/2" to="levels/2" method="_levelselect_clicked"]
[connection signal="levelselect" from="levels/3" to="menu" method="_on_levelselect"]
[connection signal="pressed" from="levels/3" to="levels/3" method="_levelselect_clicked"]
[connection signal="levelselect" from="levels/4" to="menu" method="_on_levelselect"]
[connection signal="pressed" from="levels/4" to="levels/4" method="_levelselect_clicked"]
[connection signal="levelselect" from="levels/5" to="menu" method="_on_levelselect"]
[connection signal="pressed" from="levels/5" to="levels/5" method="_levelselect_clicked"]
[connection signal="pressed" from="levels/back" to="menu" method="_on_levelback_pressed"]
[connection signal="pressed" from="pause/continue" to="menu" method="_on_continue_pressed"]
[connection signal="pressed" from="pause/restart" to="menu" method="_on_levelreset_pressed"]
[connection signal="pressed" from="pause/restart2" to="menu" method="_on_gamereset_pressed"]
[connection signal="pressed" from="pause/quit" to="menu" method="_on_quittomenu_pressed"]
[connection signal="pressed" from="levelconfirm/continue" to="menu" method="_on_levelconfirm_pressed"]
[connection signal="pressed" from="levelconfirm/return" to="menu" method="_on_backtopause_pressed"]
[connection signal="pressed" from="gameconfirm/continue" to="menu" method="_on_gameconfirm_pressed"]
[connection signal="pressed" from="gameconfirm/return" to="menu" method="_on_backtopause_pressed"]
[connection signal="pressed" from="info/back" to="menu" method="_on_back_pressed"]
[connection signal="pressed" from="end/leveltime" to="menu" method="_on_leveltime_pressed"]
[connection signal="pressed" from="end/back" to="menu" method="_on_play_back_pressed"]
[connection signal="pressed" from="leveltimer/back" to="menu" method="_on_endback_pressed"]

[editable path="menu/levels"]
[editable path="menu/info"]
[editable path="menu/quit"]
[editable path="levels/1"]
[editable path="levels/2"]
[editable path="levels/3"]
[editable path="levels/4"]
[editable path="levels/5"]
[editable path="levels/back"]
[editable path="pause/continue"]
[editable path="pause/restart"]
[editable path="pause/restart2"]
[editable path="pause/quit"]
[editable path="levelconfirm/continue"]
[editable path="levelconfirm/return"]
[editable path="gameconfirm/continue"]
[editable path="gameconfirm/return"]
[editable path="gameconfirm/text"]
[editable path="info/back"]
[editable path="end/leveltime"]
[editable path="end/back"]
[editable path="leveltimer/back"]
